[package]
name = "splinetoy"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
druid = "0.6"
serde_json = "1.0.60"
serde = "1.0"
spline = { version = "0.3.0", features=["serde"], path = ".."}
flate2 = "1.0.19"
bincode = "1.3.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"
web-sys = { version = "0.3", features = ["Window",  "EventTarget", "Location", "console"] }
console_error_panic_hook = "0.1.6"
